--- a/index.html
+++ b/index.html
@@ -1,15 +1,3 @@
-<!--
-Congratulations! Your project has been converted to JavaScript!
-
-You should see a working preview of your project on the right side of
-the screen. If not, it means something went wrong.
-
-Your project's code is all stored in the files on the left side of the
-screen. You can edit the JavaScript code and your project will change.
-But you have to save your changes using File > Save or Ctrl+S on your
-keyboard before the project preview will update.
--->
-
 <!DOCTYPE html>
 <html>
   <head>
@@ -17,9 +5,32 @@ keyboard before the project preview will update.
       rel="stylesheet"
       href="https://unpkg.com/leopard@^1/dist/index.min.css"
     />
+    <style>
+      #controls {
+        margin-bottom: 10px;
+      }
+      #controls button {
+        margin-right: 5px;
+        padding: 5px 10px;
+        font-size: 16px;
+      }
+      #project {
+        width: 100%;
+        height: 100%;
+      }
+      body, html {
+        width: 100%;
+        height: 100%;
+        margin: 0;
+        padding: 0;
+      }
+    </style>
   </head>
   <body>
-    <button id="greenFlag">Green Flag</button>
+    <div id="controls">
+      <button id="greenFlag">Green Flag</button>
+      <button id="fullscreen">Fullscreen</button>
+    </div>
     <div id="project"></div>
 
     <script type="module">
@@ -30,6 +41,52 @@ keyboard before the project preview will update.
       document.querySelector("#greenFlag").addEventListener("click", () => {
         project.greenFlag();
       });
+        // 添加键盘事件监听器，按下 "r" 键时执行 project.greenFlag()
+      document.addEventListener("keydown", (event) => {
+        if (event.key.toLowerCase() === "r") {
+          project.greenFlag();
+        }
+      });
+
+      // 添加全屏按钮的事件监听器
+      document.querySelector("#fullscreen").addEventListener("click", () => {
+        const projectElement = document.querySelector("#project");
+        if (!document.fullscreenElement) {
+          // 进入全屏模式
+          if (projectElement.requestFullscreen) {
+            projectElement.requestFullscreen();
+          } else if (projectElement.webkitRequestFullscreen) {
+            /* Safari */
+            projectElement.webkitRequestFullscreen();
+          } else if (projectElement.msRequestFullscreen) {
+            /* IE11 */
+            projectElement.msRequestFullscreen();
+          }
+        } else {
+          // 退出全屏模式
+          if (document.exitFullscreen) {
+            document.exitFullscreen();
+          } else if (document.webkitExitFullscreen) {
+            /* Safari */
+            document.webkitExitFullscreen();
+          } else if (document.msExitFullscreen) {
+            /* IE11 */
+            document.msExitFullscreen();
+          }
+        }
+      });
+
+      // 调整画布尺寸
+      function resizeCanvas() {
+        const canvas = document.querySelector('canvas');
+        if (canvas) {
+          canvas.style.width = '100%';
+          canvas.style.height = '100%';
+        }
+      }
+
+      window.addEventListener('resize', resizeCanvas);
+      resizeCanvas(); // 初始化时调用一次
 
       // Autoplay
       project.greenFlag();
